# opensky_producer

./: Cargo.toml  Dockerfile  deploy.yaml
src/: main.rs
