[package]
name = "opensky_producer"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "1.6.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version="0.12.4", features=["blocking"] }
tokio = { version = "1.37.0" , features = ["full"] }
serde_json = "1.0.117"
openssl = { version = "0.10.59", features = ["vendored"] }